# time

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
config/: settings.yaml
config/presets/: baseline.yaml  high_anomaly.yaml  imbalanced.yaml  noisy.yaml  small.yaml
data/: README.md
mlops/: __init__.py  inference.py  model_registry.py
mlops/serving/: __init__.py  app.py  schemas.py
scripts/: 01_generate_data.py  02_explore_data.py  03_train_rma_model.py  03b_train_rma_prophet.py  04_train_clustering_model.py  05_evaluate_models.py  06_export_for_serving.py
src/: __init__.py
src/data_generation/: __init__.py  network_events_generator.py  rma_generator.py
src/evaluation/: __init__.py  clustering_metrics.py  regression_metrics.py
src/models/: __init__.py  gru_forecaster.py  kmeans_clusterer.py  lsa_analyzer.py  prophet_forecaster.py
src/preprocessing/: __init__.py  network_preprocessor.py  rma_preprocessor.py
src/training/: __init__.py  clustering_trainer.py  prophet_trainer.py  rma_trainer.py
src/utils/: __init__.py  helpers.py  logging_config.py
src/visualization/: __init__.py  cluster_plots.py  eda_plots.py  forecast_plots.py  prophet_plots.py  training_plots.py
tests/: __init__.py
