[project]
name = "time-series-ml-demo"
version = "0.1.0"
description = "End-to-end time series ML pipelines: GRU/Prophet forecasting and K-means/LSA clustering on synthetic data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Justin D Norman"}
]
keywords = [
    "time-series-forecasting",
    "gru",
    "prophet",
    "clustering",
    "anomaly-detection",
    "machine-learning",
    "mlops",
    "fastapi",
    "synthetic-data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
addopts = "-v --tb=short"
